--- a/index.html
+++ b/index.html
@@ -210,12 +210,12 @@
                 <td>
                     <div class="box" id="box11">
                         <h1>11<br>
-                            <h4>Networking</h4>
+                            <h4>Abbrevation</h4>
                         </h1>
                         <div id="myModal11" class="modal">
                             <!-- Modal content -->
                             <div class="modal-content">
-                                <p>question 11 </p>
+                                <p>What is the expansion of HP and HCL ?</p>
                                 <input type="button" value="Correct" class="closebtn">
                                 <input type="button" value="InCorrect" class="simpleclosebtn">
                             </div>
@@ -309,12 +309,13 @@
                 <td>
                     <div class="box" id="box16">
                         <h1>16<br>
-                            <h4>Networking</h4>
+                            <h4>General</h4>
                         </h1>
                         <div id="myModal16" class="modal">
                             <!-- Modal content -->
                             <div class="modal-content">
-                                <p>question 16 </p>
+                                <p>Which Super Computer is
+                                    developed by Indian Scientists?</p>
                                 <input type="button" value="Correct" class="closebtn">
                                 <input type="button" value="InCorrect" class="simpleclosebtn">
                             </div>
@@ -325,12 +326,12 @@
                 <td>
                     <div class="box" id="box17">
                         <h1>17<br>
-                            <h4>Networking</h4>
+                            <h4>General</h4>
                         </h1>
                         <div id="myModal17" class="modal">
                             <!-- Modal content -->
                             <div class="modal-content">
-                                <p>question 17 </p>
+                                <p>What does the 'i' in the iPhone stands for ? </p>
                                 <input type="button" value="Correct" class="closebtn">
                                 <input type="button" value="InCorrect" class="simpleclosebtn">
                             </div>
@@ -360,12 +361,12 @@
                 <td>
                     <div class="box" id="box19">
                         <h1>19<br>
-                            <h4>Networking</h4>
+                            <h4>Abbrevation</h4>
                         </h1>
                         <div id="myModal19" class="modal">
                             <!-- Modal content -->
                             <div class="modal-content">
-                                <p>question 19 </p>
+                                <p>What does LTE and voLTE stands for ?</p>
                                 <input type="button" value="Correct" class="closebtn">
                                 <input type="button" value="InCorrect" class="simpleclosebtn">
                             </div>
@@ -486,7 +487,7 @@
                                 <p>Find the two odds from the list.</p>
                                 <ul>
                                     <li>C++</li>
-                                    <li>Fortra</li>
+                                    <li>Fortran</li>
                                     <li>Swift</li>
                                     <li>Ruby</li>
                                     <li>C</li>
