--- a/index.html
+++ b/index.html
@@ -292,9 +292,10 @@
                                 <p>Find the odd one out</p>
                                 <ul>
                                     <li>Instagram</li>
+                                    <li>Telegram</li>
                                     <li>Facebook</li>
                                     <li>Snapchat</li>
-                                    <li>Telegram</li>
+                                    <li>Hike</li>
                                     <li>Viber</li>
                                     <li>Twitter</li>
                                 </ul>
@@ -314,7 +315,7 @@
                         <div id="myModal16" class="modal">
                             <!-- Modal content -->
                             <div class="modal-content">
-                                <p>Which Super Computer is
+                                <p>Which Super Computer Series is
                                     developed by Indian Scientists?</p>
                                 <input type="button" value="Correct" class="closebtn">
                                 <input type="button" value="InCorrect" class="simpleclosebtn">
@@ -463,7 +464,7 @@
                             <!-- Modal content -->
                             <div class="modal-content">
                                 <p>Identify the Personality's name. <br>
-                                    This is an computer programmer.He is the CEO and co-founder of worlds
+                                    He is an computer programmer.He is the CEO and co-founder of worlds
                                     mostly used mobile messaging application
                                 </p>
                                 <div align="center">
