--- a/index.html
+++ b/index.html
@@ -465,10 +465,9 @@
                             <div class="modal-content">
                                 <p>Identify the Personality's name. <br>
                                     He is an computer programmer.He is the CEO and co-founder of worlds
-                                    mostly used mobile messaging application
-                                </p>
+                                    mostly used social networking site. 
                                 <div align="center">
-                                        <img src="janko.jpg" height="400px" width="400px" >
+                                        <img src="jack.jpg" height="400px" width="400px" >
                                  </div>
                                 <input type="button" value="Correct" class="closebtn">
                                 <input type="button" value="InCorrect" class="simpleclosebtn">
